# Voxian

./: '  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/: Terrain.json
Assets/Biomes/: forest.json  mountains.json  plains.json
Assets/Blocks/: air.json  dirt.json  dirt_slab.json  grass_block.json  leaves.json  stone.json
Assets/Models/Block/: cube_all.json  leaves.json  slab.json
Assets/Shaders/: Main.frag  Main.vert  Shadow.vert  chunk.frag  chunk.vert  main.frag  main.vert
Assets/models/block/: bedrock.json  cube.json  cube_all.json  dirt.json  grass_block.json  leaves.json  stone.json  wood_log.json
Code/: Direction.h  Engine.cpp  Engine.h  File.cpp  File.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Main.cpp  Memory.h  MyTime.cpp  Queue.h  ThreadPool.h  Time.cpp  Time.h  Window.cpp  Window.h
Code/Graphics/: Camera.cpp  Camera.h  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  Window.cpp  Window.h
Code/Math/: AABB.h  Math.cpp  Math.h  Matrix.h  Noise.cpp  Noise.h  Vector.h
Code/Physics/: AABB.cpp  AABB.h
Code/Renderer/: Attribute.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  TextureRegistry.h
Code/Renderer/Model/: BakedModel.h  Model.h  ModelRegistry.h
Code/Util/: Direction.cpp  Direction.h  Memory.h  Raycast.cpp  Raycast.h  Time.cpp  Time.h
Code/World/: Block.cpp  Block.h  BlockRegistry.cpp  BlockRegistry.h  BlockState.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Structure.h  World.cpp  World.h
Code/World/Block/: Block.cpp  Block.h  BlockData.cpp  BlockData.h  BlockProperties.cpp  BlockProperties.h  BlockRegistry.cpp  BlockRegistry.h  Blocks.cpp  Blocks.h
Code/World/Chunk/: ChunkManager.cpp  ChunkManager.h  ChunkMesh.h  ChunkSnapshot.h
Code/World/Entity/: Chunk.cpp  Chunk.h  Entity.cpp  Entity.h  Player.cpp  Player.h  (+2 more)
cmake/: glaze.cmake
(+25 files in other folders)
